	* m2/examples/ncurses/WindowDevice.def:  changed copyright to GPL3+.
	* m2/examples/ncurses/WindowDevice.mod:  changed copyright to GPL3+.
	* m2/examples/ncurses/testmove.mod:  changed copyright to GPL3+.
	* m2/examples/ncurses/testshort.mod:  changed copyright to GPL3+.
	* m2/examples/ncurses/testwin.mod:  changed copyright to GPL3+.

2019-11-12      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* m2/patches/gcc/trunk/01-patches:  (regenerated)
          (gm2version.o) is excluded from the stage difference test.
	* remade patches without white space changes.
	* m2/gm2-gcc/gcc-consolidation.h:  removed include params.h.
	* m2/patches/gcc/trunk/01-patches:  (regenerated)
	* m2/patches/gcc/trunk/02-patches:  (regenerated)
	* m2/patches/gcc/trunk/03-patches:  (regenerated)
	* m2/patches/gcc/trunk/04-patches:  (regenerated)
	* m2/patches/gcc/trunk/05-patches:  (regenerated)
	* m2/patches/gcc/trunk/06-patches:  (regenerated)
	* m2/patches/gcc/trunk/07-patches:  (regenerated)
	* m2/patches/gcc/trunk/08-patches:  (regenerated)
	* m2/patches/gcc/trunk/09-patches:  (regenerated)
	* m2/patches/gcc/trunk/10-patches:  (regenerated)
	* m2/Make-lang.in:  updated the paths for mc bootstrap after
          stem directory name has changed.
	* m2/Make-lang.in:  removed bootstrap references to 5.2.0
          and use local files.
	* m2/bnf/mc-5.bnf:  (DefinitionModule) call addCommentBody.
	* m2/gm2spec.c:  replaced call to fe_save_switch to save_switch.
          Pass booleans rather than ints.
	* m2/init/mcinit:  RTint added.
	* libgm2/libm2cor/Makefile.in:  regenerated.
	* libgm2/libm2log/Makefile.in:  regenerated.
	* libgm2/libm2min/Makefile.in:  regenerated.
	* libgm2/libm2pim/Makefile.in:  regenerated.
	* m2/Make-lang.in:  (m2/boot-bin/mc-devel) depends upon
          RTintdummy.o and link with it.
	* m2/bnf/mc-4.bnf:  (DefinitionModule) call addCommentBody.
	* m2/gm2-libs-ch/RTintdummy.c:  (New file).
	* m2/gm2-libs/ASCII.def:  moved comment down so GPL is emitted.