@@ -1,20 +1,28 @@
-(* Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010
-                 Free Software Foundation, Inc. *)
-(* This file is part of GNU Modula-2.
+(* winexec.mod create processes which use the WindowDevice.
 
-This library is free software; you can redistribute it and/or
-modify it under the terms of the GNU Lesser General Public
-License as published by the Free Software Foundation; either
-version 2.1 of the License, or (at your option) any later version.
+Copyright (C) 2003-2019 Free Software Foundation, Inc.
+Contributed by Gaius Mulley <gaius.mulley@southwales.ac.uk>.
 
-This library is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
+This file is part of GNU Modula-2.
+
+GNU Modula-2 is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 3, or (at your option)
+any later version.
+
+GNU Modula-2 is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-Lesser General Public License for more details.
+General Public License for more details.
 
-You should have received a copy of the GNU Lesser General Public
-License along with this library; if not, write to the Free Software
-Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA *)
+Under Section 7 of GPL version 3, you are granted additional
+permissions described in the GCC Runtime Library Exception, version
+3.1, as published by the Free Software Foundation.
+
+You should have received a copy of the GNU General Public License and
+a copy of the GCC Runtime Library Exception along with this program;
+see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see
+<http://www.gnu.org/licenses/>.  *)
 
 MODULE winexec ;
 
@@ -72,7 +80,7 @@ END SetupWindows ;
 
 
 (*
-   LocalWrite - 
+   LocalWrite -
 *)
 
 PROCEDURE LocalWrite (ch: CHAR) ;
@@ -104,7 +112,7 @@ END LocalRead ;
 
 
 (*
-   ProcessA - 
+   ProcessA -
 *)
 
 PROCEDURE ProcessA ;
@@ -119,7 +127,7 @@ END ProcessA ;
 
 
 (*
-   ProcessB - 
+   ProcessB -
 *)
 
 PROCEDURE ProcessB ;
@@ -166,4 +174,3 @@ BEGIN
       END
    END
 END winexec.
-
